--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <div class="col-md-6 pl-md-5 pt-md-5">
             <div class="row justify-content-start py-5">
               <div class="col-md-12 heading-section ftco-animate">
-                <span class="subheading">Welcome to Cleaning Company</span>
+                <span class="subheading">Welcome to Laugh-O-Laundry</span>
                 <h2 class="mb-4">Let's make you fresher than ever</h2>
                 <p>
                   we're dedicated to making you fresher than ever. Whether it's
@@ -359,7 +359,7 @@
     </section>
 
     <section class="ftco-section">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <span class="subheading">Services</span>
@@ -367,7 +367,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 col-lg-4 services ftco-animate">
+          <div class="col-md-6 col-lg-3 services ftco-animate">
             <div class="d-block d-flex">
               <div
                 class="icon d-flex justify-content-center align-items-center"
@@ -388,7 +388,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 services ftco-animate">
+          <div class="col-md-6 col-lg-3 services ftco-animate">
             <div class="d-block d-flex">
               <div
                 class="icon d-flex justify-content-center align-items-center"
@@ -400,7 +400,7 @@
                 <p>
                   Office wear shirt. Evening wear salwar kameez. Daily wear
                   pyjamas. Sportswear sweat pants. Holiday wear bermudas. Hmm,
-                  that’s a Bme, energy and space consuming list if you ever saw
+                  that’s a time, energy and space consuming list if you ever saw
                   one. We can confidently say this: you’re not just arranging
                   for a laundry service now … you’re rearranging your day and
                   life.
@@ -409,7 +409,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 services ftco-animate">
+          <div class="col-md-6 col-lg-3 services ftco-animate">
             <div class="d-block d-flex">
               <div
                 class="icon d-flex justify-content-center align-items-center"
@@ -429,11 +429,32 @@
               </div>
             </div>
           </div>
+          <div class="col-md-6 col-lg-3 services ftco-animate">
+            <div class="d-block d-flex">
+              <div
+                class="icon d-flex justify-content-center align-items-center"
+              >
+                <span class="flaticon-vacuum"></span>
+              </div>
+              <div class="media-body pl-3">
+                <h3 class="heading">Dry Cleaning</h3>
+                <p>
+                  A delicate silk dress. A tailored suit. A fancy evening gown.
+                  Your finest and most treasured garments need extra special
+                  care. We understand what it means: you’re not just looking for
+                  clean clothes… you’re ensuring they look their best for every
+                  occasion.
+                </p>
+                <p><a href="#" class="btn-custom">Read more</a></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
     <section class="ftco-section ftco-no-pt">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-md-12 col-lg-3 pr-md-4 pb-lg-0 pb-4">
             <div class="heading-section ftco-animate text-center text-lg-left">
