--- a/pricing.html
+++ b/pricing.html
@@ -26,6 +26,7 @@
 
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/custom.css" />
   </head>
   <body>
     <div class="wrap">
@@ -123,162 +124,6 @@
         </div>
       </div>
     </nav>
-    <style>
-      /* Table Styles */
-      /* Table Styles */
-      table {
-        width: 100%;
-        border-collapse: separate;
-        border-spacing: 0;
-        margin-bottom: 20px;
-        background: linear-gradient(145deg, #f9f9f9, #ffffff);
-        border-radius: 12px;
-        overflow: hidden;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease;
-      }
-
-      table:hover {
-        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
-      }
-
-      /* Table and Cell Borders */
-      table,
-      th,
-      td {
-        border: 1px solid #ddd;
-      }
-
-      th,
-      td {
-        text-align: center;
-        padding: 14px 18px;
-        transition: background-color 0.3s ease, color 0.3s ease;
-      }
-
-      th {
-        background: linear-gradient(135deg, #ff7e5f, #feb47b);
-        color: white;
-        font-size: 1.2em;
-        font-weight: bold;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-      }
-
-      tr:nth-child(even) {
-        background: linear-gradient(145deg, #f0f0f0, #e0e0e0);
-      }
-
-      tr:nth-child(odd) {
-        background: linear-gradient(145deg, #ffffff, #f9f9f9);
-      }
-
-      tr:hover {
-        background: linear-gradient(145deg, #c6ffdd, #fbd786);
-        transform: scale(1.02);
-      }
-
-      /* Quantity Control Styles */
-      .qty {
-        display: inline-flex;
-        align-items: center;
-        border-radius: 4px;
-        overflow: hidden;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-      }
-
-      .qty button {
-        background: linear-gradient(135deg, #6a11cb, #2575fc);
-        color: white;
-        border: none;
-        padding: 10px 14px;
-        cursor: pointer;
-        font-size: 1em;
-        border-radius: 4px;
-        transition: background-color 0.3s ease, transform 0.2s ease;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-      }
-
-      .qty button:hover {
-        background: linear-gradient(135deg, #5a0c9b, #1d61d3);
-        transform: scale(1.05);
-      }
-
-      .qty button:active {
-        background: linear-gradient(135deg, #490a7d, #1a50c2);
-        transform: scale(0.95);
-      }
-
-      .qty span {
-        margin: 0 14px;
-        font-size: 1.2em;
-        color: #333;
-        font-weight: bold;
-      }
-
-      /* Adding a vibrant animation to the table rows */
-      @keyframes fadeInColor {
-        0% {
-          background: rgba(255, 255, 255, 0);
-        }
-        100% {
-          background: linear-gradient(145deg, #ffffff, #f9f9f9);
-        }
-      }
-
-      tr {
-        animation: fadeInColor 0.6s ease-in-out;
-      }
-      /* Floating container */
-      .total {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: linear-gradient(135deg, #ff6f61, #d7aefb);
-    border-radius: 12px;
-    padding: 20px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
-    transition: transform 0.3s ease, opacity 0.3s ease, box-shadow 0.3s ease;
-    transform: translateY(20px);
-    opacity: 0.9;
-  }
-
-  /* Floating container hover effect */
-  .total:hover {
-    transform: translateY(0);
-    opacity: 1;
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
-  }
-
-  /* Button styles */
-  #checkout {
-    background: #28a745;
-    color: #fff;
-    border: none;
-    padding: 12px 24px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background 0.3s ease, transform 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-
-  /* Button hover effect */
-  #checkout:hover {
-    background: #218838;
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-  }
-
-  /* Total price styles */
-  .total p {
-    margin: 0;
-    font-size: 18px;
-    color: #fff;
-    font-weight: bold;
-  }
-
-    </style>
     <!-- END nav -->
     <section
       class="hero-wrap hero-wrap-2"
@@ -1466,83 +1311,7 @@
     </div>
   </div>
   
-  <script>
-    document.querySelectorAll(".qty button").forEach((button) => {
-      button.addEventListener("click", () => {
-        const qtySpan = button.parentElement.querySelector("span");
-        let qty = parseInt(qtySpan.textContent);
-        if (button.textContent === "+") {
-          qty++;
-        } else if (button.textContent === "-" && qty > 0) {
-          qty--;
-        }
-        qtySpan.textContent = qty;
-        calculateTotal();
-      });
-    });
-  
-    const prices = {
-      "SINGLE BED SHEET": [15, 25, 50, 10],
-      "DOUBLE BED SHEET": [15, 25, 50, 10],
-      "BLANKET": [15, 25, 50, 10],
-      "PILLOW COVERS": [15, 25, 50, 10],
-      "TABLE MATS": [15, 25, 0, 10],
-      "TOWEL BATH": [15, 25, 0, 10],
-      "CURTAIN": [30, 50, 75, 20],
-      "SHIRT / T-SHIRT": [15, 25, 50, 10],
-      "HALF PANT": [15, 25, 0, 10],
-      "FULL PANT": [15, 25, 50, 10],
-      "FROCK": [15, 25, 50, 10],
-      "BLAZER": [15, 25, 0, 10],
-      "GIRLS LAHENGA": [30, 50, 75, 20],
-      "JEANS / TROUSER": [15, 25, 50, 10],
-      "PYJAMA": [15, 25, 50, 10],
-      "CASUAL PANT": [15, 25, 50, 10],
-      "SPORTS WEAR": [15, 25, null, 10],
-      "DHOTI / LUNGI": [30, 50, 75, 20],
-      "SHERWANI": [40, 60, 80, 20],
-      "JACKET / SWEAT SHIRT": [40, 60, 80, 20],
-      "WINTER JACKET": [null, null, 120, null],
-      "WOOLEN JACKET": [40, null, 100, 15],
-      "KURTA": [20, 30, 50, 15],
-      "VEST": [10, 20, null, 10],
-      "HANKY / SOCKS": [10, 20, null, 10],
-      "BLAZER / SUIT": [null, null, 120, 35],
-      "SUIT 2PC": [null, null, 120, null],
-      "DUPATTA": [20, 20, 50, 15],
-      "STOLE": [20, 20, 50, 15],
-      "SCARF": [20, 20, 50, 15],
-      "GLOVES": [10, 10, 20, 10],
-      "SWEATER": [20, 20, 50, 10],
-      "LEGGINGS": [20, 25, 40, 10],
-      "BLOUSE": [15, 20, 40, 10],
-      "PETTICOAT": [10, 15, 25, 10],
-      "NIGHTY": [20, 25, 50, 10],
-      "SKIRT": [15, 25, 50, 10]
-    };
-  
-    function calculateTotal() {
-      let totalPrice = 0;
-      document.querySelectorAll("tbody tr").forEach((row) => {
-        const item = row.children[0].textContent.trim();
-        if (prices[item]) {
-          const qtys = row.querySelectorAll(".qty span");
-          for (let i = 0; i < qtys.length; i++) {
-            const price = prices[item][i] || 0;
-            const qty = parseInt(qtys[i].textContent);
-            totalPrice += price * qty;
-          }
-        }
-      });
-      document.getElementById("total-price").textContent = totalPrice;
-    }
-  
-    document.getElementById("checkout").addEventListener("click", () => {
-      alert("Total Price: ₹" + document.getElementById("total-price").textContent);
-    });
-  
-    calculateTotal();
-  </script>
+
   
     <section class="ftco-section bg-light">
       <div class="container">
@@ -1855,5 +1624,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
