--- a/pricing.html
+++ b/pricing.html
@@ -148,8 +148,8 @@
     </section>
     <div class="container">
       <div class="col-md-7 heading-section text-center ftco-animate">
-        <span class="subheading mb-3">Price &amp; Plans</span>
-        <h2>UNISEX RATE LIST</h2>
+ 
+        <h2 style="text-align: center;">UNISEX RATE LIST</h2>
       </div>
       <table>
         <thead>
@@ -873,8 +873,7 @@
     </div>
     <div class="container">
       <div class="col-md-7 heading-section text-center ftco-animate">
-        <span class="subheading mb-3">Price &amp; Plans</span>
-        <h2>RATE LIST FOR KIDS</h2>
+        <h2 style="text-align: center;">RATE LIST FOR KIDS</h2>
       </div>
       <table>
         <thead>
@@ -1099,8 +1098,7 @@
   <body>
   <div class="container">
     <div class="col-md-7 heading-section text-center ftco-animate">
-      <span class="subheading mb-3">Price &amp; Plans</span>
-      <h2>HOUSEHOLD RATE CART</h2>
+      <h2 style="text-align: center;">HOUSEHOLD RATE CART</h2>
     </div>
     <table>
       <thead>
