--- a/pricing.html
+++ b/pricing.html
@@ -127,7 +127,7 @@
     <!-- END nav -->
     <section
       class="hero-wrap hero-wrap-2"
-      style="background-image: url('images/bg_2.jpg')"
+      style="background-image: url('images/8178472.jpg')"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay"></div>
