--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="bubble x10"></div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div
           class="row no-gutters slider-text js-fullheight align-items-center justify-content-start"
           data-scrollax-parent="true"
@@ -160,7 +160,7 @@
               </a>
             </p>
           </div>
-          <div class="col-md-6 popup-container">
+          <div class="col-md-3 popup-container">
             <img
               src="./images/24hour.png"
               alt="Popup Image 1"
