--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </section>
     <!-- The text is been set to the main frame of the set  -->
     <section class="ftco-section ftco-no-pt ftco-no-pb">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row d-flex no-gutters">
           <div class="col-md-6 d-flex">
             <div
