--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="bubble x10"></div>
         </div>
       </div>
-      <div class="container-fluid">
+      <div class="container">
         <div
           class="row no-gutters slider-text js-fullheight align-items-center justify-content-start"
           data-scrollax-parent="true"
